Moficando o tratamento de excecao utilizando ProblemDetail